--- a/voiture.yaml
+++ b/voiture.yaml
@@ -2,3 +2,7 @@ voiture:
   marque: Toyota
   modele: Aygo
   annee: 2006
+  dimensions:
+    longueur: 3,41m
+    largeur: 1,62m
+    hauteur: 1,47m
