fix: ville dans societe.yaml + puissance dans voiture.yaml (à spliter en 2 commits)

--- a/yaml/voiture.yaml
+++ b/yaml/voiture.yaml
@@ -2,6 +2,7 @@ voiture:
   marque: Toyota
   modele: Aygo
   annee: 2006
+  puissanceFiscale: 4CV
   dimensions:
     poids: 800kg
     longueur: 3,41m
